--- a/Dupe Finder UI/Dupe Finder UI.csproj
+++ b/Dupe Finder UI/Dupe Finder UI.csproj
@@ -146,10 +146,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Services\IOService.cs" />
     <Compile Include="ViewModel\BaseVM.cs" />
     <Compile Include="ViewModel\DupeGroupVM.cs" />
     <Compile Include="ViewModel\DuplicateFileVM.cs" />
     <Compile Include="ViewModel\DuplicatesTreeVM.cs" />
+    <Compile Include="Services\WpfIOService.cs" />
+    <Compile Include="ViewModel\RelayCommandAsync.cs" />
     <Page Include="Resources\Icons.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
