--- a/Dupe Finder UI/Dupe Finder UI.csproj
+++ b/Dupe Finder UI/Dupe Finder UI.csproj
@@ -152,6 +152,7 @@
     <Compile Include="ViewModel\DuplicateFileVM.cs" />
     <Compile Include="ViewModel\DuplicatesTreeVM.cs" />
     <Compile Include="Services\WpfIOService.cs" />
+    <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\RelayCommandAsync.cs" />
     <Page Include="Resources\Icons.xaml">
       <SubType>Designer</SubType>
