--- a/Dupe Finder UI/Dupe Finder UI.csproj
+++ b/Dupe Finder UI/Dupe Finder UI.csproj
@@ -150,7 +150,7 @@
     <Compile Include="ViewModel\BaseVM.cs" />
     <Compile Include="ViewModel\DupeGroupVM.cs" />
     <Compile Include="ViewModel\DuplicateFileVM.cs" />
-    <Compile Include="ViewModel\DuplicatesTreeVM.cs" />
+    <Compile Include="ViewModel\DupeFinderVM.cs" />
     <Compile Include="Services\WpfIOService.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
     <Compile Include="ViewModel\RelayCommandAsync.cs" />
