Use in-memory sqlite database; Add `Add Folder...` command.

--- a/Dupe Finder UI/App.config
+++ b/Dupe Finder UI/App.config
@@ -20,6 +20,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
+    <add name="InMemory" providerName="SQLite" connectionString="Data Source=:memory:"/>
     <add name="Test" providerName="SQLite" connectionString="Data Source=Test.sqlite" />
   </connectionStrings>
 </configuration>
